Remove tmux, cuz “docker attach” & “docker exec” can do the job very well. Using settings-local.sh to handle Java Arguments this should make life a little bit easier Create a link for server.properties in /cfg folder