@@ -1,33 +1,35 @@
 FROM openjdk:alpine
 MAINTAINER Jin Van <usconan@gmail.com>
 
-ENV URL="http://ftb.cursecdn.com/FTB2/modpacks/FTBPresentsSkyfactory3"
-ENV VERSION=“3_0_8”
-ENV SERVER_FILE="FTBPresentsSkyfactory3Server.zip"
 ENV SERVER_PORT 25565
 
 WORKDIR /minecraft
 
 USER root
+
+COPY ./settings-local.sh /minecraft/cfg/settings-local.sh
+
 RUN adduser -D minecraft && \
-    apk --no-cache add curl wget tmux && \
+    apk --no-cache add curl wget && \
     mkdir -p /minecraft/world && \
     mkdir -p /minecraft/cfg && \
     mkdir -p /minecraft/backups &&\
     curl -SLO http://ftb.cursecdn.com/FTB2/modpacks/FTBPresentsSkyfactory3/3_0_8/FTBPresentsSkyfactory3Server.zip  && \
-    unzip ${SERVER_FILE} && \
+    unzip FTBPresentsSkyfactory3Server.zip && \
     chmod u+x *.sh && \
     echo "eula=true" > /minecraft/eula.txt && \
     echo "[]" > /minecraft/cfg/ops.json && \
     echo "[]" > /minecraft/cfg/whitelist.json && \
     echo "[]" > /minecraft/cfg/banned-ips.json && \
     echo "[]" > /minecraft/cfg/banned-players.json && \
-    echo "export JAVACMD=\"java\" \nexport MIN_RAM=\"512M\" \nexport MAX_RAM=\"3072M\" \nexport PERMGEN_SIZE=\"256M\" \nexport JAVA_PARAMETERS=\"-XX:+UseParNewGC -XX:+CMSIncrementalPacing -XX:+CMSClassUnloadingEnabled -XX:ParallelGCThreads=2 -XX:MinHeapFreeRatio=5 -XX:MaxHeapFreeRatio=10\"" > /minecraft/cfg/settings-local.sh && \
+    echo "[]" > /minecraft/cfg/server.properties && \
     ln -s /minecraft/cfg/ops.json /minecraft/ops.json && \
     ln -s /minecraft/cfg/whitelist.json /minecraft/whitelist.json && \
     ln -s /minecraft/cfg/banned-ips.json /minecraft/banned-ips.json && \
     ln -s /minecraft/cfg/banned-players.json /minecraft/banned-players.json && \
+    ln -s /minecraft/cfg/server.properties /minecraft/server.properties && \
     ln -s /minecraft/cfg/settings-local.sh /minecraft/settings-local.sh && \
+
     chown -R minecraft:minecraft /minecraft
 
 USER minecraft
@@ -40,4 +42,4 @@ VOLUME ["/minecraft/backups"]
 
 EXPOSE ${SERVER_PORT}
 
-CMD ["tmux", "new-session", "-s", "mcsrv", "/bin/sh", "/minecraft/ServerStart.sh"]
+CMD ["/bin/sh", "/minecraft/ServerStart.sh"]
